# llmops-databricks-course-JoseMorei

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  arxiv_curator-0.1.0-py3-none-any.whl  databricks.yml  project_config.yml  pyproject.toml  version.txt
.claude/commands/: run-notebook.md
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  sync-upstream.yml
lecture_1/: 1.1_foundation_models_overview.py  1.2_provisioned_throughput_deployment.py  1.3_arxiv_data_ingestion.py  1.4_external_models_custom_provider.py
notebooks/: 1.2_provisioned_throughput_deployment.py  1.3_arxiv_data_ingestion.py  1.3_arxiv_data_ingestion_local.py  2.3_chunking_strategies.py  2.4_embeddings_vector_search.py  3.1_custom_functions_tools.py  3.1b_simple_rag.py  3.2_mcp_integration.py  3.2b_genie.py  3.3_session_memory_lakebase.py  4.3.evaluation_theory.py  5.1_endpoint_deployment.py  5.3_guardrails_observability.py
resources/: foundation_models_overview_job.yml  hello_world_job.yml  process_data.yml  provisioned_throughput_deployment_job.yml  register_deploy_agent.yml
resources/deployment_scripts/: deploy_agent.py  log_register_agent.py
src/arxiv_curator/: agent.py  config.py  data_processor.py  evaluation.py  serving.py  vector_search.py
src/your_custom_package/: __init__.py
tests/: __init__.py  test_basic.py
