[project]
name = "arxiv-curator"
dynamic = ["version"]
description = "Arxiv Curator - Shared utilities for LLMOps Course on Databricks"
requires-python = ">=3.12, <3.13"
dependencies = [
    "cffi==2.0.0",
    "cloudpickle==3.1.2",
    "numpy==2.4.3",
    "pandas==2.2.3",
    "pyarrow==23.0.1",
    "databricks-sdk==0.99.0",
    "pydantic==2.12.5",
    "loguru==0.7.3",
    "python-dotenv==1.2.2",
    "databricks-vectorsearch==0.66",
    "openai==2.28.0",
    "databricks-mcp==0.9.0",
    "backoff==2.2.1",
    "mlflow==3.10.1",
    "nest-asyncio==1.6.0",
    "arxiv==2.4.1",
    "databricks-agents==1.9.3",
    "psycopg==3.3.3",
    "psycopg-pool==3.3.0",
    "psycopg[binary]==3.3.3"
]

[project.optional-dependencies]
dev = ["databricks-connect>=18.1.1, <19",
       "ipykernel>=7.2.0, <8",
       "pip>=26.0.1, <27",
       "pre-commit>=4.5.1, <5"]

ci = ["pre-commit>=4.5.1, <5",
      "pytest>=9.0.2, <10"]

[build-system]
requires = [
  "setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where =["src"]
include = ["arxiv_curator*"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.pytest.ini_options]
addopts = "-s --no-header --no-summary"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",    # pyflakes rules
    "E",    # pycodestyle error rules
    "W",    # pycodestyle warning rules
    "I",    # isort rules
]

ignore = [
    "E402",   # Module level import not at top of file (needed for Databricks notebooks)
    "E501",   # Line too long (handled by formatter)
    "ANN",    # Type annotations (too strict for this project)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E501", "ANN", "E402", "F821", "B905"]
"tests/*" = ["ANN201"]

[tool.ruff.format]
indent-style = "space"
